--- a/src/app/components/main/main-body/serum-loaded/serum-loaded.component.html
+++ b/src/app/components/main/main-body/serum-loaded/serum-loaded.component.html
@@ -1,7 +1,7 @@
 <div class="item1">
     <p class="headline">New Serum Loaded</p>
     <div class="cards">
-        <div class="card" *ngFor='let data of songsData;' (click)="sendData(data)">
+        <div class="card" *ngFor='let data of songsData' (click)="sendData(data)">
             <img src={{data.image}} alt="">
         </div>
    </div>
